--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,8 @@ body {
   line-height: 1.5;
   color: var(--text-color);
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 /* VISUALLY HIDDEN */
@@ -40,7 +42,13 @@ body {
 }
 
 #root {
-  height: 100%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
